--- a/src/app.html
+++ b/src/app.html
@@ -10,3 +10,14 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>    
+	html {
+		background-image: url('src/routes/MyAssets/kym-mackinnon-JZEr5sIhDe0-unsplash.jpg');
+		background-size: cover; 
+		background-position: center; 
+		background-repeat: no-repeat; 
+		height: 100vh; 
+		margin: 0;
+}
+</style>
