overflow, background image test

--- a/src/app.html
+++ b/src/app.html
@@ -19,5 +19,7 @@
 		background-repeat: no-repeat; 
 		height: 100vh; 
 		margin: 0;
-}
+		overflow-y: hidden;
+        font-family: "Noto sans";
+	}
 </style>
