--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 
 <style>    
 	html {
-		background-image: url('src/routes/MyAssets/kym-mackinnon-JZEr5sIhDe0-unsplash.jpg');
+		background-image: url('src/routes/MyAssets/kym-mackinnon-JZEr5sIhDe0-unsplash.png');
 		background-size: cover; 
 		background-position: center; 
 		background-repeat: no-repeat; 
