--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -13,7 +13,7 @@
 
 <style>    
 	html {
-		background-image: url('src/routes/MyAssets/kym-mackinnon-JZEr5sIhDe0-unsplash.png');
+		background-image: url('./src/routes/MyAssets/kym-mackinnon-JZEr5sIhDe0-unsplash.png');
 		background-size: cover; 
 		background-position: center; 
 		background-repeat: no-repeat; 
